# Remote-Desktop

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TemplateBuild.md
documentation/: .gitignore  Windowstree.txt  main.aux  main.lof  main.out  main.tex  main.toc  tree.txt
documentation/latex/: acknowledgment.tex  architechture.tex  cover.tex  file_organization.tex  functionality.tex  (+4 more)
src/: ._windows  CMakeLists.txt  main.cpp
src/models/: Admin.cpp  Admin.hpp  IModel.cpp  IModel.hpp  ModelFactory.hpp  User.cpp  User.hpp
src/networks/: net.h  net_client.h  net_common.h  net_message.h  net_server.cpp  net_server.h  net_session.cpp  net_session.h  net_tsqueue.h
src/networks/Message/: message_handles.hpp
src/networks/client/: net_client.cpp  net_client.h
src/networks/server/: net_server.cpp  net_server.h
src/temp/: SimpleClient.hpp  SimpleServer.hpp  message_type.hpp
src/utils/FileNameGenerator/: FileNameGenerator.cpp  FileNameGenerator.hpp
src/utils/Logger/: WindowLogger.cpp  WindowLogger.hpp
src/utils/NetworkInfo/: NetworkInfo.cpp
src/windows/: ._MainWindow  Application.cpp  Application.h  constant.hpp
src/windows/AllWindow/HomeWindow/: HomeWindow.cpp  HomeWindow.hpp
src/windows/AllWindow/ManageWindow/: ManageWindow.cpp  ManageWindow.hpp
src/windows/AllWindow/MenuWindow/: ListUserPanel.cpp  ListUserPanel.hpp  MenuWindow.cpp  MenuWindow.hpp  UserPanel.cpp  UserPanel.hpp
src/windows/AllWindow/SettingWindow/: SettingWindow.cpp  SettingWindow.hpp
src/windows/BasicTextWindow/: BasicTextFrame.cpp  BasicTextFrame.hpp
src/windows/CaptureWindow/: CaptureFrame.cpp  CaptureFrame.h
src/windows/LoginWindow/: LoginFrame.cpp  LoginFrame.h
src/windows/LoginWindow/Validation/: IDValidation.hpp  PasswordValidation.hpp  Validation.hpp
src/windows/MainWindow/: .gitignore  InforNetwork.cpp  InforNetwork.hpp  MainFrame.cpp  MainFrame.hpp  getHost_Info.cpp
src/windows/MainWindow/CaptureWindow/ClientWindow/: ClientNetwork.hpp  ClientTextWindow.cpp  ClientTextWindow.hpp  ClientWindow.cpp  ClientWindow.hpp  KeylogWindow.cpp  KeylogWindow.hpp
src/windows/MainWindow/CaptureWindow/ServerWindow/: ServerNetwork.hpp  ServerTextWindow.cpp  ServerTextWindow.hpp  ServerWindow.cpp  ServerWindow.hpp
src/windows/MainWindow/ClientWindow/: ClientNetwork.hpp  ClientTextWindow.cpp  ClientTextWindow.hpp  ClientWindow.cpp  ClientWindow.hpp  MMO_ClientExample.cpp
src/windows/MainWindow/HomeWindow/: HomeWindow.cpp  HomeWindow.hpp
src/windows/MainWindow/ManageWindow/: ManageWindow.cpp  ManageWindow.hpp
src/windows/MainWindow/Menu/: ClientWindow.hpp  MainWindow.cpp  MainWindow.hpp  ServerTextWindow.cpp
src/windows/MainWindow/MenuWindow/: ListUserPanel.cpp  ListUserPanel.hpp  MainWindow.cpp  MainWindow.hpp  MenuWindow.cpp  MenuWindow.hpp  UserAddDialog.cpp  UserAddDialog.hpp  UserPanel.cpp  UserPanel.hpp
src/windows/MainWindow/Navbar/: BtnNavigator.hpp  Navbar.hpp
src/windows/MainWindow/NavigationBar/: ButtonNavigation.cpp  ButtonNavigation.hpp  NavigationBar.cpp  NavigationBar.hpp  NavigationButtons.cpp  NavigationButtons.hpp  WindowID.hpp
src/windows/MainWindow/ServerWindow/: MMO_ServerExample.cpp  ServerNetwork.hpp  ServerTextWindow.hpp  ServerWindow.cpp  ServerWindow.hpp
src/windows/MainWindow/SettingsWindow/: SettingsFrame.cpp  SettingsFrame.hpp
src/windows/components/: Button.hpp  RoundPanel.cpp  RoundedPanel.hpp  RoundedText.cpp  RoundedText.hpp  SelectablePanel.hpp  wButton.hpp
src/windows/components/NavigationBar/: NavigationBar.cpp  NavigationBar.hpp  NavigationButtons.cpp  NavigationButtons.hpp  WindowID.hpp
src/windows/event/: ConnectEvent.cpp  ConnectEvent.hpp  LockEvent.cpp  LockEvent.hpp
(+14 files in other folders)
